--- a/Intranet-app/Intranet-app.csproj
+++ b/Intranet-app/Intranet-app.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Intranet_app</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+  </ItemGroup>
+
 </Project>
