--- a/Intranet-app/appsettings.json
+++ b/Intranet-app/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ramyunshop;Username=postgres;Password=Awf2030#"
   }
 }
