--- a/Intranet-app/Intranet-app.csproj
+++ b/Intranet-app/Intranet-app.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="Scripts\" />
+    <Folder Include="wwwroot\css\fonts\" />
   </ItemGroup>
 
   <ItemGroup>
